made the aritst images comply with spotify guidelines, added more styling to stats title, and fixed UI bug on smaller screens

--- a/SpotiStats/src/styles/components/TopItems.css
+++ b/SpotiStats/src/styles/components/TopItems.css
@@ -44,7 +44,7 @@
 }
 
 .artist-image {
-  clip-path: circle();
+  border-radius: 5px;
   width: 100%;
   height: auto;
   aspect-ratio: 1 / 1;
