--- a/SpotiStats/src/styles/pages/StatsPage.css
+++ b/SpotiStats/src/styles/pages/StatsPage.css
@@ -34,6 +34,25 @@
 
 .stats-landing-title {
   font-size: clamp(2rem, 6vw, 6rem);
+  background: linear-gradient(
+    to right,
+    #fc72ff,
+    #8f68ff,
+    #487bff,
+    #8f68ff,
+    #fc72ff
+  );
+  background-clip: text;
+  background-size: 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: animate-gradient 2.5s linear infinite;
+}
+
+@keyframes animate-gradient {
+  to {
+    background-position: 200%;
+  }
 }
 
 .stats-landing-subtitle {
